fix: clean up scss z-index variables

--- a/src/design/scss/variables.scss
+++ b/src/design/scss/variables.scss
@@ -110,13 +110,8 @@ $max-mobile: 414px;
 $min-mobile: 320px;
 
 // Z-INDEX
-$zindex-1: 1;
-$zindex-dropdown: 1000;
-$zindex-sticky: 1020;
 $zindex-fixed: 1030;
 $zindex-modal: 1050;
-$zindex-popover: 1060;
-$zindex-tooltip: 1070;
 $zindex-navbar: 1080;
 $zindex-drawer: 1080;
 $zindex-toast: 1090;
